# agentbeats-demo

./: pyproject.toml
src/: a2a_send.py  agent.py  server.py
src/eval_engine/: eval_tasks.py  personas.py  run.py  utils.py
